style.css
body {
  font-family: 'Montserrat', sans-serif !important;
}

.logo {
  width: 15%;
  height: auto;
  max-width: 100%;
}

.img-height {
  height: 60vh;
  object-fit: cover;
}

.title {
  padding: 40px 20px;
  text-align: center;
}

.title h1 {
  font-size: 60px;
  font-weight: 700;
  letter-spacing: 3px;
  color: #515441;
}

.bg-color {
  background-color: #515441;
}

footer {
  background-color: #333;
  color: #fff;
  padding: 20px 0;
}

footer a {
  color: #fff !important;
  text-decoration: none;
}

footer i {
  color: #fff;
  font-size: 30px;
  margin-right: 15px;
}

.grid {
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.grid-item {
  width: 20%;
  padding: 5px;      
}

.grid-item img {
  display: block;
  width: 100%;
  height: auto;
}

.btn-custom {
  background-color: #515441 !important;
  color: #fff !important;
  border: none;
}

.btn-custom:hover {
background-color: #3e3f2e !important;
  color: #fff !important;
}

.bottom-shadow {
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
}

